# src/config/swagger/swagger.conf.json
@@ -1845,6 +1845,22 @@
                 "tags": ["Report"],
                 "security": [{ "bearerAuth": [] }],
                 "produces": ["application/json"],
+                "parameters": [
+                    {
+                        "name": "startDate",
+                        "in": "query",
+                        "required": true,
+                        "type": "string",
+                        "example": "2023-07-01"
+                    },
+                    {
+                        "name": "endDate",
+                        "in": "query",
+                        "required": true,
+                        "type": "string",
+                        "example": "2023-07-11"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "$ref": "#/components/responses/Success"
